# feedyourai

./: .gitignore  Cargo.toml  README.md  build_rs_cov.profraw  tarpaulin-report.html  todo.txt
.github/workflows/: ci.yml
src/: cli.rs  clipboard.rs  config.rs  data.rs  file_processing.rs  gitignore.rs  main.rs
src/tests/: cli_tests.rs  clipboard_tests.rs  common.rs  config_tests.rs  file_processing_tests.rs  gitignore_tests.rs  main_tests.rs  mod.rs
