[package]
name = "feedyourai"
version = "1.2.4"
edition = "2024"
description = "A tool to combine text files for AI processing with filtering options."
authors = ["Alexandre Trotel <trotelalexandre@proton.me>"]
license = "MIT"

[dependencies]
clap = "4.5.34"
clipboard = "0.5.0"
ignore = "0.4.23"
walkdir = "2.5.0"

[[bin]]
name = "fyai"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.19.1"
