[package]
name = "feedyourai"
version = "1.6.0"
edition = "2024"
description = "A tool to combine text files for AI processing with flexible filtering options."
authors = ["Alexandre Trotel <trotelalexandre@proton.me>"]
license = "MIT"
homepage = "https://github.com/alexandretrotel/feedyourai"
repository = "https://github.com/alexandretrotel/feedyourai"
documentation = "https://github.com/alexandretrotel/feedyourai"

[[bin]]
name = "fyai"
path = "src/main.rs"

[dependencies]
clap = "4.5.34"
clipboard = "0.5.0"
dirs = "6.0.0"
ignore = "0.4.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.19.1"
